force-app/main/default/objects/Visit_Attendee__c/Visit_Attendee__c.object-meta.xml
<CustomObject>
    <label>Visit Attendee</label>
    <nameField>
        <displayFormat>VA-{00000}</displayFormat>
        <label>Visit Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>