force-app/main/default/objects/Visit_Attendee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Attendances</relationshipLabel>
    <relationshipName>Visit_Attendances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>