force-app/main/default/objects/Visit_Attendee__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Sort order for attendees on the visit call report.</description>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>