force-app/main/default/objects/Visit_Attendee__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the primary HCP attendee for this visit.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>