force-app/main/default/objects/Visit_Attendee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Attendee role on the visit (Attendee, Accompanied By, Speaker).</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendee</fullName>
                <default>true</default>
                <label>Attendee</label>
            </value>
            <value>
                <fullName>Accompanied By</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>